third_party_rust_rust-openssl 适配openssl独立编译配套整改
Signed-off-by: ljy9810 <longjianyin@h-partners.com>

--- a/services/key_enable/BUILD.gn
+++ b/services/key_enable/BUILD.gn
@@ -31,11 +31,13 @@ ohos_rust_executable("key_enable") {
   external_deps = common_external_deps
   if (!ohos_indep_compiler_enable) {
     deps += [
-      "${rust_openssl_dir}/openssl:lib",
       "//third_party/rust/crates/cxx:lib",
       "//third_party/rust/crates/lazy-static.rs:lib",
     ]
-    external_deps += [ "c_utils:utils_rust" ]
+    external_deps += [
+      "c_utils:utils_rust",
+      "rust_rust-openssl:lib",
+    ]
   }
   rustenv = []
   if (build_variant == "root") {
@@ -60,11 +62,13 @@ ohos_rust_shared_ffi("key_enable_lib") {
   external_deps = common_external_deps
   if (!ohos_indep_compiler_enable) {
     deps += [
-      "${rust_openssl_dir}/openssl:lib",
       "//third_party/rust/crates/cxx:lib",
       "//third_party/rust/crates/lazy-static.rs:lib",
     ]
-    external_deps += [ "c_utils:utils_rust" ]
+    external_deps += [
+      "c_utils:utils_rust",
+      "rust_rust-openssl:lib",
+    ]
   }
   rustenv = []
   if (build_variant == "root") {
