--- a/test/unittest/BUILD.gn
+++ b/test/unittest/BUILD.gn
@@ -1,4 +1,4 @@
-# Copyright (c) 2023-2024 Huawei Device Co., Ltd.
+# Copyright (c) 2023-2025 Huawei Device Co., Ltd.
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
 # You may obtain a copy of the License at
@@ -134,6 +134,7 @@ ohos_unittest("local_code_sign_unittest") {
   deps = [
     "${code_signature_root_dir}/interfaces/inner_api/code_sign_utils:libcode_sign_utils",
     "${code_signature_root_dir}/interfaces/inner_api/local_code_sign:liblocal_code_sign_sdk",
+    "${code_signature_root_dir}/test/common:code_sign_test_common_source_set",
   ]
 
   include_dirs = [
@@ -222,6 +223,7 @@ ohos_unittest("sign_and_enforce_unittest") {
   deps = [
     "${code_signature_root_dir}/interfaces/inner_api/code_sign_utils:libcode_sign_utils",
     "${code_signature_root_dir}/interfaces/inner_api/local_code_sign:liblocal_code_sign_sdk",
+    "${code_signature_root_dir}/test/common:code_sign_test_common_source_set",
   ]
 
   include_dirs = [
@@ -251,6 +253,7 @@ ohos_unittest("multi_thread_local_sign_unittest") {
   deps = [
     "${code_signature_root_dir}/interfaces/inner_api/code_sign_utils:libcode_sign_utils",
     "${code_signature_root_dir}/interfaces/inner_api/local_code_sign:liblocal_code_sign_sdk",
+    "${code_signature_root_dir}/test/common:code_sign_test_common_source_set",
   ]
 
   include_dirs = [
