support local debugger
Signed-off-by: zhonnie <zhonnieyan@163.com>

--- a/code_signature.gni
+++ b/code_signature.gni
@@ -26,6 +26,7 @@ declare_args() {
   code_signature_support_oh_release_app = false
   code_signature_support_app_allow_list = false
   code_signature_screenlock_mgr_enable = false
+  code_signature_support_local_debugger = false
   if (defined(global_parts_info) &&
       defined(global_parts_info.theme_screenlock_mgr)) {
     code_signature_screenlock_mgr_enable = true
