--- a/interfaces/inner_api/code_sign_utils/BUILD.gn
+++ b/interfaces/inner_api/code_sign_utils/BUILD.gn
@@ -16,6 +16,9 @@ import("../../../code_signature.gni")
 
 config("public_code_sign_utils_configs") {
   include_dirs = [ "include" ]
+  if (code_signature_support_binary_enable) {
+    include_dirs += [ "${code_signature_root_dir}/services/key_enable/utils/include" ]
+  }
 }
 
 ohos_shared_library("libcode_sign_utils") {
@@ -71,6 +74,12 @@ ohos_shared_library("libcode_sign_utils") {
     "hitrace:hitrace_meter",
     "openssl:libcrypto_shared",
   ]
+  if (code_signature_support_binary_enable) {
+    sources += [ "${code_signature_root_dir}/utils/src/elf_code_sign_block.cpp" ]
+    deps += [ "${code_signature_root_dir}/services/key_enable/utils:libkey_enable_utils" ]
+    defines += [ "SUPPORT_BINARY_ENABLE" ]
+    external_deps += [ "elfio:elfio" ]
+  }
   install_enable = true
 
   part_name = "code_signature"
