--- a/services/local_code_sign/local_code_sign.cfg
+++ b/services/local_code_sign/local_code_sign.cfg
@@ -4,7 +4,8 @@
             "path" : ["/system/bin/sa_main", "/system/profile/local_code_sign.json"],
             "secon": "u:r:local_code_sign:s0",
             "permission": [
-                "ohos.permission.ATTEST_KEY"
+                "ohos.permission.ATTEST_KEY",
+                "ohos.permission.GET_BUNDLE_INFO_PRIVILEGED"
             ],
             "ondemand": true,
             "once": 1,
