--- a/test/fuzztest/local_code_sign_stub/signlocalcode_fuzzer/BUILD.gn
+++ b/test/fuzztest/local_code_sign_stub/signlocalcode_fuzzer/BUILD.gn
@@ -71,5 +71,7 @@ ohos_fuzztest("SignLocalCodeFuzzTest") {
     "openssl:libcrypto_shared",
     "safwk:system_ability_fwk",
     "samgr:samgr_proxy",
+    "bundle_framework:appexecfwk_base",
+    "bundle_framework:appexecfwk_core",
   ]
 }
