--- a/test/fuzztest/local_code_sign_stub/signlocalcodestub_fuzzer/BUILD.gn
+++ b/test/fuzztest/local_code_sign_stub/signlocalcodestub_fuzzer/BUILD.gn
@@ -68,5 +68,7 @@ ohos_fuzztest("SignLocalCodeStubFuzzTest") {
     "openssl:libcrypto_shared",
     "safwk:system_ability_fwk",
     "samgr:samgr_proxy",
+    "bundle_framework:appexecfwk_base",
+    "bundle_framework:appexecfwk_core",
   ]
 }
