--- a/test/unittest/BUILD.gn
+++ b/test/unittest/BUILD.gn
@@ -182,6 +182,10 @@ ohos_unittest("local_code_sign_utils_unittest") {
     "hilog:libhilog",
     "huks:libhukssdk",
     "openssl:libcrypto_shared",
+    "bundle_framework:appexecfwk_base",
+    "bundle_framework:appexecfwk_core",
+    "ipc:ipc_core",
+    "samgr:samgr_proxy",
   ]
 }
 
@@ -213,6 +217,10 @@ ohos_unittest("local_code_sign_utils_mock_unittest") {
     "huks:libhukssdk",
     "init:libbegetutil",
     "openssl:libcrypto_shared",
+    "bundle_framework:appexecfwk_base",
+    "bundle_framework:appexecfwk_core",
+    "samgr:samgr_proxy",
+    "ipc:ipc_core",
   ]
 }
 
