--- a/test/unittest/BUILD.gn
+++ b/test/unittest/BUILD.gn
@@ -358,6 +358,7 @@ ohos_unittest("enable_verity_ioctl_unittest") {
 ohos_unittest("jit_code_sign_unittest") {
   module_out_path = "code_signature/code_signature"
   include_dirs = [
+    "utils/include",
     "${code_signature_root_dir}/interfaces/inner_api/jit_code_sign/include",
   ]
   sources = [ "jit_code_sign_test.cpp" ]
