Add OID and length check for enterprise cert
Signed-off-by: wangyinghao <wangyinghao12@huawei.com>
Change-Id: I43c1585456ae9dc5e5a4eced942501e6c79676fe

--- a/services/key_enable/utils/BUILD.gn
+++ b/services/key_enable/utils/BUILD.gn
@@ -36,11 +36,12 @@ ohos_static_library("libkey_enable_utils") {
     "ability_base:want",
     "c_utils:utils",
     "common_event_service:cesfwk_innerkits",
+    "eventhandler:libeventhandler",
     "hilog:libhilog",
     "init:libbegetutil",
     "ipc:ipc_single",
+    "openssl:libcrypto_shared",
     "samgr:samgr_proxy",
-    "eventhandler:libeventhandler",
   ]
 
   defines = []
