--- a/services/local_code_sign/BUILD.gn
+++ b/services/local_code_sign/BUILD.gn
@@ -37,6 +37,7 @@ ohos_shared_library("liblocal_code_sign") {
   include_dirs = [
     "include",
     "${code_signature_root_dir}/interfaces/inner_api/local_code_sign/include",
+    "${code_signature_root_dir}/interfaces/inner_api/code_sign_attr_utils/include",
     "${code_signature_root_dir}/utils/include",
   ]
   shlib_type = "sa"
