--- a/test/unittest/BUILD.gn
+++ b/test/unittest/BUILD.gn
@@ -151,6 +151,7 @@ ohos_unittest("local_code_sign_unittest") {
     "${code_signature_root_dir}/interfaces/inner_api/local_code_sign/include",
     "${code_signature_root_dir}/services/local_code_sign/include",
     "${code_signature_root_dir}/interfaces/inner_api/code_sign_utils/include",
+    "${code_signature_root_dir}/interfaces/inner_api/code_sign_attr_utils/include",
   ]
   configs = [ "${code_signature_root_dir}:common_utils_config" ]
   external_deps = [
