--- a/test/fuzztest/local_code_sign_stub/initlocalcertificate_fuzzer/BUILD.gn
+++ b/test/fuzztest/local_code_sign_stub/initlocalcertificate_fuzzer/BUILD.gn
@@ -34,6 +34,7 @@ ohos_fuzztest("InitLocalCertificateFuzzTest") {
 
   include_dirs = [
     "${code_signature_root_dir}/interfaces/inner_api/local_code_sign/include",
+    "${code_signature_root_dir}/interfaces/inner_api/code_sign_attr_utils/include",
     "${code_signature_root_dir}/services/local_code_sign/include",
   ]
   external_deps = [
