--- a/test/unittest/BUILD.gn
+++ b/test/unittest/BUILD.gn
@@ -190,6 +190,7 @@ ohos_unittest("local_code_sign_utils_unittest") {
     "c_utils:utils",
     "fsverity-utils:libfsverity_utils",
     "hilog:libhilog",
+    "hisysevent:libhisysevent",
     "huks:libhukssdk",
     "openssl:libcrypto_shared",
     "bundle_framework:appexecfwk_base",
@@ -225,6 +226,7 @@ ohos_unittest("local_code_sign_utils_mock_unittest") {
     "c_utils:utils",
     "fsverity-utils:libfsverity_utils",
     "hilog:libhilog",
+    "hisysevent:libhisysevent",
     "huks:libhukssdk",
     "init:libbegetutil",
     "openssl:libcrypto_shared",
@@ -446,6 +448,7 @@ ohos_unittest("cert_chain_verifier_unittest") {
     "access_token:libtoken_setproc",
     "c_utils:utils",
     "hilog:libhilog",
+    "hisysevent:libhisysevent",
     "huks:libhukssdk",
     "openssl:libcrypto_shared",
   ]
