--- a/interfaces/inner_api/code_sign_utils/BUILD.gn
+++ b/interfaces/inner_api/code_sign_utils/BUILD.gn
@@ -15,7 +15,10 @@ import("//build/ohos.gni")
 import("../../../code_signature.gni")
 
 config("public_code_sign_utils_configs") {
-  include_dirs = [ "include" ]
+  include_dirs = [
+    "include",
+    "${code_signature_root_dir}/interfaces/inner_api/code_sign_attr_utils/include",
+  ]
   if (code_signature_support_binary_enable) {
     defines = [ "SUPPORT_BINARY_ENABLE" ]
     include_dirs +=
